--- a/dashboard_display.ioc
+++ b/dashboard_display.ioc
@@ -9,14 +9,18 @@ I2C1.IPParameters=OwnAddress,Timing,I2C_Speed_Mode,Speed,Analog_Filter
 I2C1.OwnAddress=0x3b
 I2C1.Speed=400
 I2C1.Timing=0x00401A58
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_32
+IWDG.Reload=250
 KeepUserPlacement=false
 Mcu.Family=STM32F0
 Mcu.IP0=FREERTOS
 Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IPNb=5
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IPNb=6
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA4
@@ -25,8 +29,9 @@ Mcu.Pin2=PA10
 Mcu.Pin3=PA13
 Mcu.Pin4=PA14
 Mcu.Pin5=VP_FREERTOS_VS_ENABLE
-Mcu.Pin6=VP_SYS_VS_tim1
-Mcu.PinsNb=7
+Mcu.Pin6=VP_IWDG_VS_IWDG
+Mcu.Pin7=VP_SYS_VS_tim1
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -38,7 +43,6 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:false
-NVIC.TIM1_BRK_UP_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_BRK_UP_TRG_COM_IRQn
 NVIC.TimeBaseIP=TIM1
 PA10.GPIOParameters=GPIO_Label
@@ -90,7 +94,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
@@ -108,6 +112,8 @@ RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=dashboard_display
