--- a/dashboard_display.ioc
+++ b/dashboard_display.ioc
@@ -1,11 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.IPParameters=Resolution
+ADC.Resolution=ADC_RESOLUTION_8B
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,96,StartDefaultTask,Default,NULL
 File.Version=6
 I2C1.Analog_Filter=I2C_ANALOGFILTER_DISABLE
 I2C1.I2C_Speed_Mode=I2C_Fast
-I2C1.IPParameters=OwnAddress,Timing,I2C_Speed_Mode,Speed,Analog_Filter
+I2C1.IPParameters=OwnAddress,Timing,I2C_Speed_Mode,Speed,Analog_Filter,NoStretchMode
+I2C1.NoStretchMode=I2C_NOSTRETCH_ENABLE
 I2C1.OwnAddress=0x3b
 I2C1.Speed=400
 I2C1.Timing=0x00401A58
@@ -14,24 +17,26 @@ IWDG.Prescaler=IWDG_PRESCALER_32
 IWDG.Reload=250
 KeepUserPlacement=false
 Mcu.Family=STM32F0
-Mcu.IP0=FREERTOS
-Mcu.IP1=I2C1
-Mcu.IP2=IWDG
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP0=ADC
+Mcu.IP1=FREERTOS
+Mcu.IP2=I2C1
+Mcu.IP3=IWDG
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IPNb=7
 Mcu.Name=STM32F030F4Px
 Mcu.Package=TSSOP20
-Mcu.Pin0=PA4
-Mcu.Pin1=PA9
-Mcu.Pin2=PA10
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_FREERTOS_VS_ENABLE
-Mcu.Pin6=VP_IWDG_VS_IWDG
-Mcu.Pin7=VP_SYS_VS_tim1
-Mcu.PinsNb=8
+Mcu.Pin0=PA1
+Mcu.Pin1=PA4
+Mcu.Pin2=PA9
+Mcu.Pin3=PA10
+Mcu.Pin4=PA13
+Mcu.Pin5=PA14
+Mcu.Pin6=VP_FREERTOS_VS_ENABLE
+Mcu.Pin7=VP_IWDG_VS_IWDG
+Mcu.Pin8=VP_SYS_VS_tim1
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F030F4Px
@@ -45,6 +50,8 @@ NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:false
 NVIC.TimeBase=TIM1_BRK_UP_TRG_COM_IRQn
 NVIC.TimeBaseIP=TIM1
+PA1.Mode=IN1
+PA1.Signal=ADC_IN1
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=I2C_SDA
 PA10.Mode=I2C
@@ -91,10 +98,10 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=dashboard_display.ioc
 ProjectManager.ProjectName=dashboard_display
 ProjectManager.StackSize=0x400
-ProjectManager.TargetToolchain=EWARM
+ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_IWDG_Init-IWDG-false-HAL-true,5-MX_ADC_Init-ADC-false-HAL-true
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
 RCC.APB1TimFreq_Value=48000000
