Final commit before commisioning

--- a/dashboard_display.ioc
+++ b/dashboard_display.ioc
@@ -35,7 +35,7 @@ Mcu.Pin4=PA13
 Mcu.Pin5=PA14
 Mcu.Pin6=VP_FREERTOS_VS_ENABLE
 Mcu.Pin7=VP_IWDG_VS_IWDG
-Mcu.Pin8=VP_SYS_VS_tim1
+Mcu.Pin8=VP_SYS_VS_tim3
 Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -48,8 +48,9 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:3\:0\:false\:false\:false\:true\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:true\:false
-NVIC.TimeBase=TIM1_BRK_UP_TRG_COM_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TimeBase=TIM3_IRQn
+NVIC.TimeBaseIP=TIM3
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
 PA10.GPIOParameters=GPIO_Label
@@ -121,6 +122,6 @@ VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_tim3.Mode=TIM3
+VP_SYS_VS_tim3.Signal=SYS_VS_tim3
 board=dashboard_display
